<resources>
    <string name="app_name">ProjetWS</string>
    <string name="title_add">Ajouter un Étudiant</string>
    <string name="title_list">Liste des Étudiants</string>
    <string name="btn_add">Ajouter</string>
    <string name="btn_save">Enregistrer</string>
    <string name="btn_cancel">Annuler</string>
    <string name="btn_delete">Supprimer</string>
    <string name="btn_edit">Modifier</string>
    <string name="lbl_nom">Nom</string>
    <string name="lbl_prenom">Prénom</string>
    <string name="lbl_ville">Ville</string>
    <string name="lbl_sexe">Sexe</string>
    <string name="radio_homme">Homme</string>
    <string name="radio_femme">Femme</string>
    <string name="confirm_delete">Voulez-vous vraiment supprimer cet étudiant ?</string>
    <string name="msg_success_add">Étudiant ajouté avec succès.</string>
    <string name="msg_success_update">Étudiant modifié avec succès.</string>
    <string name="msg_success_delete">Étudiant supprimé.</string>
    <string name="msg_error">Erreur réseau. Vérifiez que le serveur est démarré.</string>
    <string name="msg_empty_fields">Veuillez remplir tous les champs.</string>

    <string-array name="villes">
        <item>Rabat</item>
        <item>Casablanca</item>
        <item>Marrakech</item>
        <item>Fès</item>
        <item>Meknès</item>
        <item>Tanger</item>
        <item>Agadir</item>
        <item>Oujda</item>
    </string-array>
</resources>
